Issue 9332 Updated lucene library to version 2.4.1.
git-svn-id: https://svn.imcode.com/imcode/imcms/trunk@16220 bd66a97b-2aff-0310-9095-89ca5cabf5a6